--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,4 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+<ion-list>
+  <ion-item [href]="'/tabs/school/' + campus.title" *ngFor="let campus of campuses" > {{campus.title}}
+  	  <ion-icon name="{{campus.icon}}" slot="start"></ion-icon>
+  	</ion-item>
+</ion-list>	
+</ion-content>
